Fix build out of src directory. Bug #158328
2004-11-17  Marco Pesenti Gritti  <marco@gnome.org>

        * data/Makefile.am:

        Fix build out of src directory. Bug #158328

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -20,7 +20,7 @@ EXTRA_DIST =				\
 if GCONF_SCHEMAS_INSTALL
 install-data-local:
 	if test -z "$(DESTDIR)"; then \
-	  GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(srcdir)/yelp.schemas ; \
+	  GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(top_builddir)/data/yelp.schemas ; \
 	fi
 else
 install-data-local:
