Added X-GNOME-Bugzilla-Version support for bug-buddy love

--- a/yelp.desktop.in.in
+++ b/yelp.desktop.in.in
@@ -11,3 +11,4 @@ Categories=GNOME;Application;Core;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=Yelp
 X-GNOME-Bugzilla-Component=general
+X-GNOME-Bugzilla-Version=@VERSION@
