--- a/data/toc.xml.in
+++ b/data/toc.xml.in
@@ -5,360 +5,63 @@
 
   <toc id="Desktop">
     <_title>Desktop</_title>
-
-    <category>GNOME</category>
-    <category>GNOME|Applications|Desktop Preferences</category>
-    <category>GNOME|Core Desktop</category>
-    <category>GNOME|Desktop</category>
-    <category>GNOME|Desktop|User Guides</category>
-    <category>GNOME|Preferences</category>
-    <category>GNOME|Settings</category>
-    <category>GNOME|System</category>
-    <category>GNOME|System Administration</category>
-    <category>GNOME|Other</category>
-
-    <toc id="KDE">
-      <_title>KDE</_title>
-
-      <category>KDE</category>
-      <category>KDE|Applications</category>
-      <category>KDE|Development</category>
-      <category>KDE|Games</category>
-      <category>KDE|Graphics</category>
-      <category>KDE|Internet</category>
-      <category>KDE|Multimedia</category>
-      <category>KDE|Other</category>
-      <category>KDE|Programs</category>
-      <category>KDE|Settings</category>
-      <category>KDE|System</category>
-      <category>KDE|Utilities</category>
-    </toc>
-  </toc>
-
-  <toc id="Applications">
-    <_title>Applications</_title>
-
-    <category>Applications</category>
-    <category>GNOME|Accessibility</category>
-    <category>GNOME|Applications</category>
-    <category>GNOME|Applications|Accessories</category>
-
     <toc id="Applets">
       <_title>Applets</_title>
-
-      <category>GNOME|Applets</category>
-      <category>GNOME|Applets|Accessories</category>
-      <category>GNOME|Applets|Amusement</category>
-      <category>GNOME|Applets|Clock</category>
-      <category>GNOME|Applets|Internet</category>
-      <category>GNOME|Applets|Monitors</category>
-      <category>GNOME|Applets|Multimedia</category>
-      <category>GNOME|Applets|Network</category>
-      <category>GNOME|Applets|Utility</category>
     </toc>
-
-    <toc id="Games">
-      <_title>Games and Entertainment</_title>
-
-      <category>Applications|Amusement</category>
-      <category>Applications|Games</category>
-      <category>Applications|Games|Arcade</category>
-      <category>Applications|Games|Board</category>
-      <category>Applications|Games|First Person Shooters</category>
-      <category>Applications|Games|Puzzles</category>
-      <category>Applications|Games|Fighting</category>
-      <category>Applications|Games|Role-Playing</category>
-      <category>Applications|Games|Simulation</category>
-      <category>Applications|Games|Strategy</category>
-      <category>Applications|Games|Other</category>
-      <category>GNOME|Applications|Games</category>
-      <category>GNOME|Games</category>
+    <toc id="KDE">
+      <_title>KDE</_title>
     </toc>
+  </toc>
 
-    <toc id="Education">
+  <toc id="Applications" icon="gnome-applications">
+    <_title>Applications</_title>
+
+    <toc id="ApplicationsAccessibility" icon="accessibility-directory">
+      <_title>Accessibility</_title>
+    </toc>
+    <toc id="ApplicationsAccessories" icon="gnome-util">
+      <_title>Accessories</_title>
+    </toc>
+    <toc id="ApplicationsEducation" icon="gnome-applications">
       <_title>Education Applications</_title>
-
-      <category>Applications|Education</category>
-      <category>Applications|Education|Arts</category>
-      <category>Applications|Education|Computer Science</category>
-      <category>Applications|Education|English</category>
-      <category>Applications|Education|Language</category>
-      <category>Applications|Education|Maths</category>
-      <category>Applications|Education|Music</category>
-      <category>Applications|Education|Science</category>
-      <category>Applications|Education|Technology</category>
-      <category>Applications|Education|Testing</category>
-      <category>Applications|Education|Other</category>
     </toc>
-
-    <toc id="Internet">
-      <_title>Internet Applications</_title>
-
-      <category>Applications|Internet</category>
-      <category>Applications|Internet|Chat</category>
-      <category>Applications|Internet|Email</category>
-      <category>Applications|Internet|Fax</category>
-      <category>Applications|Internet|File Sharing</category>
-      <category>Applications|Internet|FTP</category>
-      <category>Applications|Internet|Internet Phone</category>
-      <category>Applications|Internet|Messaging</category>
-      <category>Applications|Internet|News</category>
-      <category>Applications|Internet|Video Conferencing</category>
-      <category>Applications|Internet|Web</category>
-      <category>Applications|Internet|Other</category>
-      <category>GNOME|Applications|Internet</category>
-      <category>GNOME|Internet</category>
+    <toc id="ApplicationsGames" icon="gnome-joystick">
+      <_title>Games</_title>
     </toc>
-
-    <toc id="Multimedia">
-      <_title>Multimedia Applications</_title>
-
-      <category>Applications|Multimedia</category>
-      <category>Applications|Multimedia|Graphics</category>
-      <category>Applications|Multimedia|Graphics|3D Modelling</category>
-      <category>Applications|Multimedia|Graphics|3D Rendering</category>
-      <category>Applications|Multimedia|Graphics|CAD</category>
-      <category>Applications|Multimedia|Graphics|Capture</category>
-      <category>Applications|Multimedia|Graphics|Conversion</category>
-      <category>Applications|Multimedia|Graphics|Drawing</category>
-      <category>Applications|Multimedia|Graphics|Editing</category>
-      <category>Applications|Multimedia|Graphics|Viewing</category>
-      <category>Applications|Multimedia|Graphics|Other</category>
-      <category>Applications|Multimedia|Sound</category>
-      <category>Applications|Multimedia|Sound|Analysis</category>
-      <category>Applications|Multimedia|Sound|CD Mastering</category>
-      <category>Applications|Multimedia|Sound|Conversion</category>
-      <category>Applications|Multimedia|Sound|Editing</category>
-      <category>Applications|Multimedia|Sound|MIDI</category>
-      <category>Applications|Multimedia|Sound|Mixers</category>
-      <category>Applications|Multimedia|Sound|Players</category>
-      <category>Applications|Multimedia|Sound|Recording</category>
-      <category>Applications|Multimedia|Sound|Speech</category>
-      <category>Applications|Multimedia|Sound|Other</category>
-      <category>Applications|Multimedia|Video</category>
-      <category>Applications|Multimedia|Video|Capture</category>
-      <category>Applications|Multimedia|Video|Conversion</category>
-      <category>Applications|Multimedia|Video|Display</category>
-      <category>Applications|Multimedia|Video|Editing</category>
-      <category>Applications|Multimedia|Video|Other</category>
-      <category>Applications|Multimedia|Other</category>
-      <category>GNOME|Applications|Graphics</category>
-      <category>GNOME|Applications|Sound and Video</category>
-      <category>GNOME|Graphics</category>
-      <category>GNOME|Multimedia</category>
+    <toc id="ApplicationsGraphics" icon="gnome-graphics">
+      <_title>Graphics</_title>
     </toc>
-
-    <toc id="Office">
-      <_title>Office and Productivity Applications</_title>
-
-      <category>Applications|Office</category>
-      <category>Applications|Office|Calendar</category>
-      <category>Applications|Office|Data Processing</category>
-      <category>Applications|Office|Database</category>
-      <category>Applications|Office|Email</category>
-      <category>Applications|Office|Financial</category>
-      <category>Applications|Office|PIM</category>
-      <category>Applications|Office|Plotting</category>
-      <category>Applications|Office|Presentation</category>
-      <category>Applications|Office|Publishing</category>
-      <category>Applications|Office|Publishing|Web Publishing</category>
-      <category>Applications|Office|Word Processing</category>
-      <category>Applications|Office|Other</category>
-      <category>GNOME|Applications|Office</category>
+    <toc id="ApplicationsInternet" icon="gnome-globe">
+      <_title>Internet</_title>
     </toc>
-
-    <toc id="Scientific">
-      <_title>Scientific Applications</_title>
-
-      <category>Applications|Scientific</category>
-      <category>Applications|Scientific|Astronomy</category>
-      <category>Applications|Scientific|Astrophysics</category>
-      <category>Applications|Scientific|Biology</category>
-      <category>Applications|Scientific|Chemistry</category>
-      <category>Applications|Scientific|EDA</category>
-      <category>Applications|Scientific|Genetics</category>
-      <category>Applications|Scientific|Math</category>
-      <category>Applications|Scientific|Physics</category>
-      <category>Applications|Scientific|Visualisation</category>
-      <category>Applications|Scientific|Other</category>
+    <toc id="ApplicationsMultimedia" icon="gnome-multimedia">
+      <_title>Sound &amp; Video</_title>
     </toc>
-
-    <toc id="Security">
-      <_title>Securities</_title>
-
-      <category>Applications|Security</category>
-      <category>Applications|Security|Cryptography</category>
-      <category>Applications|Security|Other</category>
+    <toc id="ApplicationsOffice" icon="gnome-applications">
+      <_title>Office</_title>
     </toc>
-
-    <toc id="Editors">
-      <_title>Editors</_title>
-
-      <category>Applications|Text Editors</category>
-      <category>Applications|Text Editors|CLI</category>
-      <category>Applications|Text Editors|GUI</category>
-      <category>Applications|Text Editors|Other</category>
+    <toc id="ApplicationsOther" icon="gnome-other">
+      <_title>Other</_title>
     </toc>
-
-    <toc id="Utilities">
-      <_title>Utilities</_title>
-
-      <category>Applications|Utilities</category>
-      <category>Applications|Utilities|Archiving</category>
-      <category>Applications|Utilities|Calculating</category>
-      <category>Applications|Utilities|Clocks</category>
-      <category>Applications|Utilities|Compression</category>
-      <category>Applications|Utilities|File Utilities</category>
-      <category>Applications|Utilities|Monitors</category>
-      <category>Applications|Utilities|Printing</category>
-      <category>Applications|Utilities|Terminals</category>
-      <category>Applications|Utilities|Text Utilities</category>
-      <category>Applications|Utilities|Other</category>
-      <category>GNOME|Applications|System Tools</category>
-      <category>GNOME|Utilities</category>
+    <toc id="ApplicationsProgramming" icon="gnome-devel">
+      <_title>Programming</_title>
     </toc>
-
-    <toc id="X">
+    <toc id="ApplicationsScientific" icon="gnome-applications">
+      <_title>Scientific</_title>
+    </toc>
+    <toc id="ApplicationsSystem" icon="gnome-system">
+      <_title>System Tools</_title>
+    </toc>
+    <toc id="ApplicationsX" icon="gnome-applications">
       <_title>X Applications</_title>
-
-      <category>Applications|X</category>
-      <category>Applications|X|Configuration</category>
-      <category>Applications|X|Fonts</category>
-      <category>Applications|X|Login Managers</category>
-      <category>Applications|X|Screensavers</category>
-      <category>Applications|X|Window Managers</category>
-      <category>Applications|X|Other</category>
-      <category>CDE</category>
     </toc>
   </toc>
 
-  <toc id="Development">
-    <_title>Development</_title>
-
-    <category>Development</category>
-    <category>Development|Databases</category>
-    <category>GNOME|Applications|Programming</category>
-    <category>GNOME|Development</category>
-    <category>GNOME|Development|Applications</category>
-    <category>GNOME|Development|Introductory</category>
-    <category>GNOME|Development|Tutorials</category>
-    <category>GNOME|Development|White Papers</category>
-
-    <toc id="Tools">
-      <_title>Development Tools</_title>
-
-      <category>Development|Development Tools</category>
-      <category>Development|Development Tools|Build Tools</category>
-      <category>Development|Development Tools|Code Generators</category>
-      <category>Development|Development Tools|Configuration</category>
-      <category>Development|Development Tools|Debuggers</category>
-      <category>Development|Development Tools|IDEs</category>
-      <category>Development|Development Tools|Packaging</category>
-      <category>Development|Development Tools|Profiling</category>
-      <category>Development|Development Tools|RAD</category>
-      <category>Development|Development Tools|Version Control</category>
-      <category>Development|Development Tools|Other</category>
-    </toc>
-
-    <toc id="Environments">
-      <_title>Development Environments</_title>
-
-      <category>Development|Environments</category>
-      <category>Development|Environments|ADA</category>
-      <category>Development|Environments|C</category>
-      <category>Development|Environments|C++</category>
-      <category>Development|Environments|GNOME</category>
-      <category>Development|Environments|GTK+</category>
-      <category>Development|Environments|gtk++</category>
-      <category>Development|Environments|Java</category>
-      <category>Development|Environments|KDE</category>
-      <category>Development|Environments|Perl</category>
-      <category>Development|Environments|Python</category>
-      <category>Development|Environments|Qt</category>
-      <category>Development|Environments|Tcl/Tk</category>
-      <category>Development|Environments|WebML</category>
-      <category>Development|Environments|Other</category>
-    </toc>
-
-    <toc id="Kernels">
-      <_title>Kernels</_title>
-      <category>Development|Kernels</category>
-      <category>Development|Kernels|FreeBSD</category>
-      <category>Development|Kernels|Linux</category>
-      <category>Development|Kernels|NetBSD</category>
-      <category>Development|Kernels|Other</category>
-      <category>Development|Libraries</category>
-      <category>Development|System Calls</category>
-      <category>Development|Other</category>
-    </toc>
+  <toc id="Other">
+    <_title>Other Documentation</_title>
   </toc>
 
-  <toc id="General">
-    <_title>General</_title>
-
-    <category>General</category>
-    <category>General|Licenses</category>
-    <category>General|Linux</category>
-    <category>General|Linux|Distributions</category>
-    <category>General|Linux|Distributions|Caldera</category>
-    <category>General|Linux|Distributions|Debian</category>
-    <category>General|Linux|Distributions|Mandrake</category>
-    <category>General|Linux|Distributions|Red Flag</category>
-    <category>General|Linux|Distributions|Red Hat</category>
-    <category>General|Linux|Distributions|Slackware</category>
-    <category>General|Linux|Distributions|SuSE</category>
-    <category>General|Linux|Distributions|Other</category>
-    <category>General|Linux|General</category>
-    <category>General|Linux|Other</category>
-    <category>General|Other</category>
-  </toc>
-
-  <toc id="System">
-    <_title>System</_title>
-
-    <category>System</category>
-    <category>System|Administration</category>
-    <category>System|Administration|Backups</category>
-    <category>System|Administration|Backups|Local</category>
-    <category>System|Administration|Backups|Remote</category>
-    <category>System|Administration|Filesystems</category>
-    <category>System|Administration|Networking</category>
-    <category>System|Administration|Networking|AppleTalk</category>
-    <category>System|Administration|Networking|PPP</category>
-    <category>System|Administration|Networking|SMB</category>
-    <category>System|Administration|Networking|TCP/IP</category>
-    <category>System|Administration|Networking|DNS</category>
-    <category>System|Administration|Networking|Other</category>
-    <category>System|Administration|Users</category>
-    <category>System|Administration|Other</category>
-    <category>System|Configuration</category>
-    <category>System|Configuration|Config Files</category>
-    <category>System|Configuration|Configuration Tools</category>
-    <category>System|Configuration|Other</category>
-    <category>System|Hardware</category>
-    <category>System|Hardware|Input Devices</category>
-    <category>System|Hardware|Networking</category>
-    <category>System|Hardware|Other</category>
-    <category>System|Hardware|PCI/ISA/PCMCIA</category>
-    <category>System|Hardware|Processor</category>
-    <category>System|Hardware|Storage</category>
-    <category>System|Hardware|Video</category>
-    <category>System|Other</category>
-    <category>System|Package Management</category>
-    <category>System|Security</category>
-    <category>System|Security|Firewall</category>
-    <category>System|Security|Intrusion Detection</category>
-    <category>System|Security|Virus</category>
-    <category>System|Security|Other</category>
-    <category>System|Services</category>
-    <category>System|Services|BIND</category>
-    <category>System|Services|FTP</category>
-    <category>System|Services|HTTP</category>
-    <category>System|Services|Other</category>
-    <category>System|Services|Printing</category>
-    <category>System|Services|SMB</category>
-    <category>System|Services|SSH</category>
-    <category>System|Services|Syslog</category>
-    <category>System|Services|Telnet</category>
+  <toc id="Man">
+    <_title>Man Pages</_title>
   </toc>
 </toc>
