--- a/stylesheets/Makefile.am
+++ b/stylesheets/Makefile.am
@@ -1,39 +1,7 @@
 @INTLTOOL_XML_RULE@
 
-yelpcustomizationdir=$(datadir)/sgml/docbook/yelp
+xsldir=$(datadir)/sgml/docbook/yelp
 
-yelpcustomization_DATA = 	\
-	db2html-admon.xsl	\
-	db2html-biblio.xsl	\
-	db2html-block.xsl	\
-	db2html-callout.xsl	\
-	db2html-chunk.xsl	\
-	db2html-common.xsl	\
-	db2html-division.xsl	\
-	db2html-ebnf.xsl	\
-	db2html-footnote.xsl	\
-	db2html-glossary.xsl	\
-	db2html-header.xsl	\
-	db2html-html.xsl	\
-	db2html-index.xsl	\
-	db2html-inline.xsl	\
-	db2html-list.xsl	\
-	db2html-math.xsl	\
-	db2html-media.xsl	\
-	db2html-navbar.xsl	\
-	db2html-param.xsl	\
-	db2html-qanda.xsl	\
-	db2html-refentry.xsl	\
-	db2html-suppressed.xsl	\
-	db2html-synopsis.xsl	\
-	db2html-table.xsl	\
-	db2html-title.xsl	\
-	db2html-titlepage.xsl	\
-	db2html-toc.xsl		\
-	db2html-xref.xsl	\
-	db2html.xsl		\
-	gettext.xsl		\
-	l10n.xml		\
-	man2html.xsl
+xsl_DATA = db2html.xsl man2html.xsl toc2html.xsl
 
-EXTRA_DIST=$(yelpcustomization_DATA)
+EXTRA_DIST=$(xsl_DATA)
