--- a/data/toc.xml.in
+++ b/data/toc.xml.in
@@ -13,7 +13,7 @@
     </toc>
   </toc>
 
-  <toc id="Applications" icon="gnome-applications">
+  <toc id="Applications">
     <_title>Applications</_title>
 
     <toc id="ApplicationsAccessibility" icon="accessibility-directory">
@@ -22,7 +22,7 @@
     <toc id="ApplicationsAccessories" icon="gnome-util">
       <_title>Accessories</_title>
     </toc>
-    <toc id="ApplicationsEducation" icon="gnome-applications">
+    <toc id="ApplicationsEducation">
       <_title>Education Applications</_title>
     </toc>
     <toc id="ApplicationsGames" icon="gnome-joystick">
@@ -46,22 +46,18 @@
     <toc id="ApplicationsProgramming" icon="gnome-devel">
       <_title>Programming</_title>
     </toc>
-    <toc id="ApplicationsScientific" icon="gnome-applications">
+    <toc id="ApplicationsScientific">
       <_title>Scientific</_title>
     </toc>
     <toc id="ApplicationsSystem" icon="gnome-system">
       <_title>System Tools</_title>
     </toc>
-    <toc id="ApplicationsX" icon="gnome-applications">
+    <toc id="ApplicationsX">
       <_title>X Applications</_title>
     </toc>
   </toc>
 
   <toc id="Other">
     <_title>Other Documentation</_title>
-  </toc>
-
-  <toc id="Man">
-    <_title>Man Pages</_title>
   </toc>
 </toc>
