--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,5 +1,6 @@
 # Add files with translateable strings here.
 # Please keep this file sorted alphabetically.
+data/man.xml.in
 data/toc.xml.in
 data/yelp.schemas.in
 data/ui/yelp.glade
@@ -8,9 +9,7 @@ src/yelp-base.c
 src/yelp-db-pager.c
 src/yelp-db2html.c
 src/yelp-error.c
-src/yelp-info.c
 src/yelp-main.c
-src/yelp-man.c
 src/yelp-pager.c
 src/yelp-toc-pager.c
 src/yelp-window.c
