- Added sections: 3f 3pm 3qt 3x
* data/man.xml.in:
- Added sections: 3f 3pm 3qt 3x

--- a/data/man.xml.in
+++ b/data/man.xml.in
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?><!-- -*- indent-tabs-mode: nil -*- -->
 <?xml-stylesheet href="toc.xml.in.content/toc.css" type="text/css"?>
 <toc id="Man">
   <_title>Man Pages</_title>
@@ -23,6 +23,18 @@
     </toc>
     <toc id="Man-man3" sect="3">
       <_title>Library Functions</_title>
+      <toc id="Man-man3f" sect="3f">
+        <_title>FORTRAN Functions</_title>
+      </toc>
+      <toc id="Man-man3pm" sect="3pm">
+        <_title>Perl Functions</_title>
+      </toc>
+      <toc id="Man-man3qt" sect="3qt">
+        <_title>Qt Functions</_title>
+      </toc>
+      <toc id="Man-man3x" sect="3x">
+        <_title>X11 Functions</_title>
+      </toc>
     </toc>
     <toc id="Man-man9" sect="9">
       <_title>Kernel Routines</_title>
