- Put a11y stuff in Accessibility (duh)
* data/scrollkeeper.xml:
- Put a11y stuff in Accessibility (duh)

* data/ui/yelp-ui.xml:
* data/ui/yelp.glade:
* src/Makefile.am:
* src/yelp-bookmarks.c:
* src/yelp-bookmarks.h:
* src/yelp-base.c:
* src/yelp-utils.h:
* src/yelp-window.c:
* src/yelp-window.h:
- First pass at bookmarks

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -72,6 +72,7 @@ yelp_SOURCES =							\
 	$(gnome_yelp_idl_sources)				\
 	$(man_sources)						\
 	yelp-base.c		yelp-base.h			\
+	yelp-bookmarks.c 	yelp-bookmarks.h		\
 	yelp-cache.c		yelp-cache.h			\
 	yelp-db-pager.c		yelp-db-pager.h			\
 	yelp-error.c		yelp-error.h			\
