--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,17 +2,19 @@
 # Please keep this file sorted alphabetically.
 data/man.xml.in
 data/toc.xml.in
-data/yelp.schemas.in
 data/ui/yelp.glade
+data/yelp.schemas.in
 src/GNOME_Yelp.server.in
 src/yelp-base.c
 src/yelp-db-pager.c
 src/yelp-db2html.c
 src/yelp-error.c
 src/yelp-main.c
+src/yelp-man-pager.c
+src/yelp-man.c
 src/yelp-pager.c
+src/yelp-settings.c
 src/yelp-toc-pager.c
 src/yelp-window.c
+src/yelp-xslt-pager.c
 yelp.desktop.in.in
-src/yelp-man-pager.c
-src/yelp-settings.c
