data/icons/yelp-watermark-blockquote.xcf
* data/icons/Makefile.am:
* data/icons/yelp-watermark-blockquote.xcf
* data/icons/yelp-watermark-blockquote-00AB.png
* data/icons/yelp-watermark-blockquote-00BB.png
* data/icons/yelp-watermark-blockquote-201C.png
* data/icons/yelp-watermark-blockquote-201D.png
* data/icons/yelp-watermark-blockquote-201E.png
- Added a single XCF to store the blockquote watermarks
- Added watermark for U+201D

--- a/data/icons/Makefile.am
+++ b/data/icons/Makefile.am
@@ -9,6 +9,7 @@ icon_DATA = 						\
 	yelp-watermark-blockquote-00AB.png		\
 	yelp-watermark-blockquote-00BB.png		\
 	yelp-watermark-blockquote-201C.png		\
+	yelp-watermark-blockquote-201D.png		\
 	yelp-watermark-blockquote-201E.png
 
 EXTRA_DIST = 								\
