- Adding yelp-info-pager.[ch]
* src/Makefile.am:
* src/yelp-info-pager.c:
* src/yelp-info-pager.h:
* src/yelp-window.c:
- Adding yelp-info-pager.[ch]

* src/yelp-man-pager.c:
- Some cleanups

* stylesheets/Makefile.am:
* stylesheets/info2html.xsl:
- Adding info2html.xsl

* stylesheets/db2html.xsl.in:
* stylesheets/man2html.xsl:
- Minor stylistic stuff

--- a/stylesheets/Makefile.am
+++ b/stylesheets/Makefile.am
@@ -2,6 +2,6 @@
 
 xsldir=$(datadir)/sgml/docbook/yelp
 
-xsl_DATA = db2html.xsl man2html.xsl toc2html.xsl
+xsl_DATA = db2html.xsl info2html.xsl man2html.xsl toc2html.xsl
 
 EXTRA_DIST=$(xsl_DATA)
