Start of GNU Info support Compile added files
2004-12-31  Davyd Madeley  <davyd@madeley.id.au>

        * src/yelp-info-parser.c (add):
        * src/yelp-info-parser.h (add):
        * src/yelp-info-pager.c: Start of GNU Info support
        * src/Makefile.am: Compile added files

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,7 @@ man_sources =
 endif
 
 if ENABLE_INFO
-info_sources = yelp-info-pager.c yelp-info-pager.h
+info_sources = yelp-info-pager.c yelp-info-pager.h yelp-info-parser.c yelp-info-parser.h
 else
 info_sources =
 endif
