--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,5 +1,6 @@
 # Add files with translateable strings here.
 # Please keep this file sorted alphabetically.
+[encoding: UTF-8]
 data/man.xml.in
 data/toc.xml.in
 data/ui/yelp.glade
