--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([yelp], [2.9.1],
+AC_INIT([yelp], [2.9.2],
         [http://bugzilla.gnome.org/enter_bug.cgi?product=yelp])
 AC_CONFIG_SRCDIR(src/yelp-main.c)
 AC_CONFIG_HEADERS(config.h)
@@ -43,7 +43,7 @@ AM_GLIB_DEFINE_LOCALEDIR([GNOMELOCALEDIR])
 PKG_CHECK_MODULES(YELP,
 [
 	gconf-2.0
-	gnome-doc-utils
+	gnome-doc-utils >= 0.1.1
 	gnome-vfs-2.0 >= 1.1
 	gtk+-2.0 >= 2.5.3
 	libbonobo-2.0 >= 1.108.0
