Added missing files. Updated Swedish translation.
2005-01-03  Christian Rose  <menthos@menthos.com>

	* POTFILES.in: Added missing files.
	* sv.po: Updated Swedish translation.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -7,9 +7,11 @@ data/ui/yelp.glade
 data/yelp.schemas.in
 src/GNOME_Yelp.server.in
 src/yelp-base.c
+src/yelp-bookmarks.c
 src/yelp-db-pager.c
 src/yelp-db2html.c
 src/yelp-error.c
+src/yelp-io-channel.c
 src/yelp-main.c
 src/yelp-man-pager.c
 src/yelp-pager.c
