- Cleaned up string, #161777
* data/yelp.schemas.in:
- Cleaned up string, #161777

--- a/data/yelp.schemas.in
+++ b/data/yelp.schemas.in
@@ -23,7 +23,7 @@
       <locale name="C">
         <short>Use system fonts</short>
         <long>
-          Use the systems default fonts.
+          Use the default fonts set for the system.
         </long>
       </locale>
     </schema>
