- Calling the fromt page Help Topics
* data/toc.xml.in:
* src/yelp-window.c:
- Calling the fromt page Help Topics

* src/yelp-settings.c:
* src/yelp-settings.h:
- Added prev/next page icons

* src/yelp-window.c:
- Did some work on the Find toolbar

* stylesheets/db2html.xsl.in:
- Some navigation bar work

--- a/data/toc.xml.in
+++ b/data/toc.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-stylesheet href="toc.xml.in.content/toc.css" type="text/css"?>
 <toc id="index">
-  <_title>Help Contents</_title>
+  <_title>Help Topics</_title>
 
   <toc id="Desktop">
     <_title>Desktop</_title>
