--- a/stylesheets/Makefile.am
+++ b/stylesheets/Makefile.am
@@ -1,7 +1,7 @@
 @INTLTOOL_XML_RULE@
 
-xsldir=$(datadir)/sgml/docbook/yelp
+xsldir=$(datadir)/yelp/xslt
 
-xsl_DATA = db2html.xsl info2html.xsl man2html.xsl toc2html.xsl
+xsl_DATA = db2html.xsl db-title.xsl info2html.xsl man2html.xsl toc2html.xsl
 
 EXTRA_DIST=$(xsl_DATA)
