--- a/data/toc.xml.in
+++ b/data/toc.xml.in
@@ -35,7 +35,7 @@
       <_title>Internet</_title>
     </toc>
     <toc id="ApplicationsMultimedia" icon="gnome-multimedia">
-      <_title>Sound &amp; Video</_title>
+      <_title>Multimedia</_title>
     </toc>
     <toc id="ApplicationsOffice" icon="gnome-applications">
       <_title>Office</_title>
