- Added Preferences and Administration, per panel changes - Renamed
* data/scrollkeeper.xml:
* data/toc.xml.in:
- Added Preferences and Administration, per panel changes
- Renamed Applets to Panel Applets

* src/yelp-settings.c:
* stylesheets/db2html.xsl.in:
* stylesheets/toc2html.xsl:
- Rendering improvements

--- a/data/toc.xml.in
+++ b/data/toc.xml.in
@@ -5,8 +5,14 @@
 
   <toc id="Desktop">
     <_title>Desktop</_title>
-    <toc id="Applets">
-      <_title>Applets</_title>
+    <toc id="DesktopApplets">
+      <_title>Panel Applets</_title>
+    </toc>
+    <toc id="DesktopAdministration">
+      <_title>Administration</_title>
+    </toc>
+    <toc id="DesktopPreferences">
+      <_title>Preferences</_title>
     </toc>
     <toc id="KDE">
       <_title>KDE</_title>
