--- a/.cvsignore
+++ b/.cvsignore
@@ -7,6 +7,8 @@ Makefile
 Makefile.in
 mkinstalldirs
 missing
+depcomp
+compile
 po
 intl
 configure
@@ -20,5 +22,4 @@ stamp-h1
 yelp-*.tar.gz
 core*
 autom4te*
-
-
+yelp.desktop.in
