Define MOZILLA_INTERNAL_API, which is necessary since mozilla 1.8b2,
2005-04-08  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:  Define MOZILLA_INTERNAL_API, which is necessary since
	mozilla 1.8b2, because Yelp uses internal strings.
	* src/yelp-gecko-utils.cpp: Include config.h here.
	Fixes bug #173053.

--- a/configure.in
+++ b/configure.in
@@ -136,6 +136,9 @@ AC_SUBST(MOZILLA_INCLUDE_ROOT)
 MOZILLA_HOME="`$PKG_CONFIG --variable=libdir $MOZILLA-gtkmozembed`"
 AC_SUBST(MOZILLA_HOME)
 
+dnl Needed since gecko 1.8b2
+AC_DEFINE([MOZILLA_INTERNAL_API],[1],[Define to have access to internal Mozilla APIs])
+
 AC_ARG_ENABLE([cpp-rtti],
               AC_HELP_STRING([--enable-cpp-rtti],[Enable C++ RTTI]),[],
               [enable_cpp_rtti=no])
